--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body {
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
@@ -36,6 +38,7 @@ body {
 
 .main, .details, .signup-page {
     text-align: center;
+    margin: 15px;
 }
 
 .main {
@@ -128,197 +131,166 @@ label{
     border: 3px solid #96A1C4;
 }
 
-/** DASHBOARD PAGE **/
-.parent-dashboard {
+/* SIDEBAR */
+.sidebar{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-/* left section */
-.leftSection {
-    display: grid;
-    align-content: space-between;
-    width: 20%;
-    background-color: #181D31;
-    color: white;
-    height: 1000px;
-}
-
-.blockA, .blockC{
-    padding: 5%;
-    display: flex;
-}
-
-
-/* block A */
-.app-name{
-    font-weight: bold;
-}
-
-.logo-small{
-    width: 100px;
-    height: 100px;
-}
-
-/* block B */
-.menu{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 2%;
-    margin-left: 10%;
-    font-size: 18px;
-}
-
-.white-icon {
-    color: white;
-}
-
-.menu-title{
-    margin-left: 10px;
-    font-weight: 600;
-}
-
-.menu-options{
-    color: white;
-    text-decoration: none;
-}
-
-.menu:hover{
-    background-color: #96A1C4;  
-}
-
-/* block C */
-.gabay-dashboard{
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.gabay-logo{
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
     width: 80px;
-    height: 80px;
-    border-radius: 50%;
+    background-color: #181D31;
+    padding: 0.4rem 0.8rem;
+    transition: all 0.5s ease;
 }
 
-/* right section */
-.rightSection {
-    width: 80%;
-    height: 1000px;
+.sidebar.active ~ .main-content{
+    left: 250px;
+    width: calc(100% - 250px);
 }
 
-/* search bar */
-.header-search {
-    position: relative;
-    width: 100%;
-    max-width: 300px;
-    margin-top: 20px;
+.sidebar.active{
+    width: 250px;
 }
 
-.header-search input[type="text"] {
-    width: 90%; 
-    padding-right: 30px; 
-    margin: 20px;
-    padding: 1vh;
-    border: none;
-    background-color: #96A1C4;
-    border-radius: 50px;
-    outline: none;
-    font-size: 1vw;
-    position: relative;
-}
-
-.header-search input[type="text"]::placeholder {
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
+#btn{
     position: absolute;
-    left: 10px; 
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.header-search .fa-search {
-    position: absolute;
-    right: 10px; 
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-}
-
-/* filter */
-.filter{
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 50px;
-}
-
-.monthly, .yearly{
-    border: 2px solid black;
-    border-radius: 50px;
-    margin: 10px;
-    padding: 8px;
-    position: relative;
-}
-
-.filter div {
+    color: #fff;
+    top: 0.4rem;
+    left: 50%;
+    font-size: 1.2rem;
+    line-height: 50px;
+    transform: translateX(-50%);
     cursor: pointer;
 }
 
-#months {
-    display: none;
-    position: absolute; 
-    top: calc(100% + 5px); 
-    left: 0; 
-    background-color: white; 
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 5px;
-    z-index: 1;
+.sidebar.active #btn{
+    left: 90%;
 }
 
-/* statistics */
-.statistics{
+.sidebar .top .logo{
+    color: #fff;
     display: flex;
-    justify-content: space-evenly;
-    margin: 2%;
-}
-
-.total, .positive, .negative{
-    display: flex;
-    justify-content: space-between;
+    height: 50px;
+    width: 100%;
     align-items: center;
-    border-radius: 5px;
-    padding: 2%;
-    width: 300px;
+    pointer-events: none;
+    opacity: 0;
 }
 
-.total{
-    background-color: #FBFFE0;
+.sidebar.active .top .logo{
+    opacity: 1;
 }
 
-.positive{
-    background-color: #E2FFED;
+.top .logo i {
+    font-size: 2rem;
+    margin-right: 5px;
 }
 
-.negative{
-    background-color: #FFEFEF;
+.sidebar p{
+    opacity: 0;
 }
 
-.stats-title{
-    font-size: 20px;
+.sidebar.active p{
+    opacity: 1;
+}
+
+.sidebar ul li{
+    position: relative;
+    list-style-type: none;
+    height: 50px;
+    width: 90%;
+    margin: 0.8rem auto;
+    line-height: 50px;
+    white-space: nowrap;
+}
+
+.sidebar ul li a{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 0.8rem;
+}
+
+.sidebar ul li a:hover{
+    background-color: #fff;
+    color: #181D31;
+}
+
+.sidebar ul li a i{
+    min-width: 50px;
+    text-align: center;
+    height: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+}
+
+.sidebar .nav-item{
+    opacity: 0;
+}
+
+.sidebar.active .nav-item{
+    opacity: 1;
+}
+
+.sidebar ul li .tooltip{
+    position: absolute;
+    left: 125px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
+    border-radius: 0.6rem;
+    padding: 0.4rem 1.2rem;
+    line-height: 1.8rem;
+    z-index: 20;
+    opacity: 0;
+    white-space: nowrap;
+}
+
+.sidebar ul li:hover .tooltip{
+    opacity: 1;
+}
+
+.sidebar.active ul li .tooltip{
+    display: none;
+}
+
+/* USER INFO AT THE SIDEBAR */
+.user{
+    display: flex;
+    margin-top: auto;
+    align-items: center;
+    margin: 1rem 0;
+}
+
+.user p{
+    color: #fff;
+    opacity: 1;
+    margin-left: 1rem;
+}
+
+.user-img{
+    width: 50px;
+    border-radius: 100%;
+    border: 1px solid black;
+}
+
+.bold{
     font-weight: 600;
 }
 
-.number{
-    font-size: 24px;
-}
 
-#icon-stats{
-    font-size: 60px;
+/** DASHBOARD PAGE **/
+.main-content{
+    position: relative;
+    background-color: #eee;
+    min-height: 100vh;
+    top: 0;
+    left: 80px;
+    transform: all 0.5s ease;
+    width: calc(100% - 80px);
+    padding: 1rem;
 }
-
-/* graphs */
