--- a/style.css
+++ b/style.css
@@ -256,6 +256,8 @@ label{
 }
 
 .sidebar ul li:hover .tooltip{
+    background-color: black;
+    color: white;
     opacity: 1;
 }
 
@@ -298,4 +300,105 @@ label{
     transform: all 0.5s ease;
     width: calc(100% - 80px);
     padding: 1rem;
+}
+
+/* filter */
+.filter{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.monthly, .yearly{
+    border: 2px solid black;
+    border-radius: 50px;
+    margin: 10px;
+    padding: 8px;
+    position: relative;
+}
+
+.filter div {
+    cursor: pointer;
+}
+
+/* Container */
+.container {
+    display: grid;
+    grid-template-rows: repeat(3, 300px); 
+    grid-template-columns: repeat(6, 1fr); 
+    gap: 10px; 
+}
+
+/* Grid Items */
+.statistics, .graph1, .graph2, .graph3, .graph4, .graph5, .graph6 {
+    background-color: #fff;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.statistics {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.graph1 {
+    grid-row: 1 / 2;
+    grid-column: 3 / 7;
+}
+
+.graph2 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+}
+
+.graph3 {
+    grid-row: 2 / 3;
+    grid-column: 3 / 7;
+}
+
+.graph4 {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+}
+
+.graph5 {
+    grid-row: 3 / 4;
+    grid-column: 3 / 5;
+}
+
+.graph6 {
+    grid-row: 3 / 4;
+    grid-column: 5 / 7;
+}
+
+.total, .positive, .negative{
+    display: flex;
+    align-items: center;
+    padding: 16px;
+}
+
+.total, .positive{
+    border-bottom: 2px solid #181D31;
+}
+
+.total i, .positive i, .negative i {
+    font-size: 4rem; 
+    margin-right: 10px; 
+}
+
+.total .text, .positive .text, .negative .text {
+    display: flex;
+    flex-direction: column; 
+}
+
+.text .bold{
+    font-family: "Hammersmith One", sans-serif;
+    font-size: 20px;
+}
+
+.number {
+    margin: 0; 
+    font-size: 24px;
 }
