--- a/style.css
+++ b/style.css
@@ -328,15 +328,15 @@ label{
     cursor: pointer;
 }
 
-/* Container */
+/* container */
 .container {
     display: grid;
-    grid-template-rows: repeat(3, 300px); 
-    grid-template-columns: repeat(6, 1fr); 
-    gap: 10px; 
+    grid-template-rows: repeat(5, 300px); 
+    grid-template-columns: repeat(8, 1fr); 
+    gap: 20px; 
 }
 
-/* Grid Items */
+/* grid items */
 .statistics, .graph1, .graph2, .graph3, .graph4, .graph5, .graph6 {
     background-color: #fff;
     padding: 10px;
@@ -352,35 +352,36 @@ label{
 }
 
 .graph1 {
-    grid-row: 1 / 2;
-    grid-column: 3 / 7;
+    grid-row: 1 / 3;
+    grid-column: 3 / 9;
 }
 
 .graph2 {
-    grid-row: 2 / 3;
+    grid-row: 2 / 4;
     grid-column: 1 / 3;
 }
 
 .graph3 {
-    grid-row: 2 / 3;
-    grid-column: 3 / 7;
+    grid-row: 3 / 5;
+    grid-column: 3 / 9;
 }
 
 .graph4 {
-    grid-row: 3 / 4;
+    grid-row: 4 / 6;
     grid-column: 1 / 3;
 }
 
 .graph5 {
-    grid-row: 3 / 4;
-    grid-column: 3 / 5;
+    grid-row: 5 / 6;
+    grid-column: 3 / 6;
 }
 
 .graph6 {
-    grid-row: 3 / 4;
-    grid-column: 5 / 7;
+    grid-row: 5 / 6;
+    grid-column: 6 / 9;
 }
 
+/* statistics */
 .total, .positive, .negative{
     display: flex;
     align-items: center;
@@ -409,4 +410,10 @@ label{
 .number {
     margin: 0; 
     font-size: 24px;
+}
+
+/* graphs */
+.reason{
+    font-family: "Hammersmith One", sans-serif;
+    font-size: 20px;
 }
