--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ label{
 
 .sidebar ul li .tooltip {
     position: absolute;
-    left: calc(100% + 10px); /* Position it to the right of the sidebar */
+    left: calc(100% + 10px); 
     top: 50%;
     transform: translateY(-50%);
     box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
@@ -374,44 +374,51 @@ label{
 }
 
 /* statistics */
-.statistics{
-    display: flex;
-    justify-content: space-evenly;
-    margin: 2%;
+.statistics {
+    display: grid;
+    grid-template-rows: 200px; 
+    grid-template-columns: repeat(6, 1fr); 
+    gap: 20px; 
+    margin-bottom: 20px;
 }
 
 .total, .positive, .negative{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-radius: 5px;
     padding: 2%;
-    width: 300px;
 }
 
 .total{
     background-color: #FBFFE0;
+    grid-row: 1 / 1;
+    grid-column: 1 / 3;
 }
 
 .positive{
     background-color: #E2FFED;
+    grid-row: 1 / 1;
+    grid-column: 3 / 5;
 }
 
 .negative{
     background-color: #FFEFEF;
+    grid-row: 1 / 1;
+    grid-column: 5 / 7;
 }
 
 .stats-title{
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
 }
 
 .number{
-    font-size: 24px;
+    font-size: 28px;
 }
 
 #icon-stats{
-    font-size: 60px;
+    font-size: 80px;
 }
 
 /* graphs */
