--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ label{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
@@ -144,8 +144,6 @@ label{
     background-color: #181D31;
     padding: 0.4rem 0.8rem;
     transition: all 0.5s ease;
-    overflow-y: auto;
-    z-index: 999;
 }
 
 .sidebar.active ~ .main-content{
