--- a/style.css
+++ b/style.css
@@ -239,11 +239,11 @@ label{
     line-height: 50px;
 }
 
-.sidebar .nav-item{
+.sidebar .nav-item, .sidebar .div{
     opacity: 0;
 }
 
-.sidebar.active .nav-item{
+.sidebar.active .nav-item, .sidebar.active .div{
     opacity: 1;
 }
 
