--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #96A1C4;
+    background-color: white;
     height: 100vh;
     width: 100vw;
     box-sizing: border-box;
@@ -26,7 +26,7 @@
 
 /* right section */
 .rightSide {
-    background-color: #fff;
+    background-color: #9B112E;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -34,6 +34,10 @@
     box-sizing: border-box;
     width: 550px;
     max-height: 90%;
+}
+
+.rightSide p{
+    color: #eee;
 }
 
 .main, .details, .signup-page {
@@ -64,15 +68,16 @@
 .form-group input[type="password"] {
     width: 100%;
     padding: 1vh;
+    background-color: #9B112E;
     border: none;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
     outline: none;
     font-size: 1vw;
 }
 
 .form-group input[type="text"]::placeholder,
 .form-group input[type="password"]::placeholder {
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 18px;
     position: absolute;
@@ -85,6 +90,8 @@
 }
 
 label{
+    color: white;
+    margin-left: 4px;
     font-size: 16px;
 }
 
@@ -101,7 +108,7 @@ label{
 
 /* a links */
 .register {
-    color: black;  
+    color: white;  
     font-weight: 600; 
 }
 
@@ -116,9 +123,9 @@ label{
     padding: 15px;
     border: none;
     border-radius: 5px;
-    background-color: black;
-    color: #fff;
-    border: 3px solid black;
+    background-color: white;
+    color: #9B112E;
+    border: 3px solid white;
     font-size: 18px; 
     font-weight: bold;
     cursor: pointer;
@@ -126,9 +133,9 @@ label{
 }
 
 .registration:hover {
-    background-color: #fff;
-    color: #96A1C4;
-    border: 3px solid #96A1C4;
+    background-color: #9B112E;
+    color: white;
+    border: 3px solid white;
 }
 
 /* SIDEBAR */
