--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ label{
     left: 0;
     height: 100vh;
     width: 80px;
-    background-color: #181D31;
+    background-color: #9B112E;
     padding: 0.4rem 0.8rem;
     transition: all 0.5s ease;
     z-index: 1000;
@@ -221,7 +221,7 @@ label{
 }
 
 .sidebar ul li.active{
-    background: #96A1C4;
+    background: #F6AA26;
     border-radius: 50px;
 }
 
@@ -294,7 +294,7 @@ label{
 .user-img{
     width: 50px;
     border-radius: 100%;
-    border: 1px solid black;
+    border: 2px solid white;
 }
 
 .bold{
