--- a/public/style.css
+++ b/public/style.css
@@ -433,31 +433,87 @@ label{
 
 /* For data tracker */
 .data-label {
+    width: 500px;
+    justify-content: center;
+    font-size: 30px;
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
+.data-input {
+    width: 600px;
+    height: 40px;
+    padding: 5px;
+    margin-left: 50px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
     background-color: #f9f9f9;
-    font-size: 16px;
+    font-size: 15px;
 }
+
+select {
+    width: 600px;
+    height: 40px;
+    padding: 5px;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    font-size: 15px;
+}
+
 select:focus {
     outline: none;
     border-color: #6cb2eb;
     box-shadow: 0 0 5px rgba(108, 178, 235, 0.5);
 }
 
-.data-input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    width: 100%;
-    box-sizing: border-box;
+/* Container for data tracker */
+.container-for-tracker {
+    width: 1400px; 
+    height: 640px; 
+    background-color: #fca3a3; 
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
 }
+
+.container-for-fields {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+}
+
+.field {
+    display: flex;
+    align-items: center;
+    margin-top: 18px;
+    justify-content: left;
+}
+
+.submit-button {
+    border: none;
+    border-radius: 20px;
+    margin-top: 15px;
+    background-color: #9B112E; 
+    color: #ffffff; 
+    padding: 10px 20px; 
+    text-align: right;
+    display: inline-block;
+}
+
+.radio-option {
+    display: inline-block;  
+    margin-left: 50px;
+    margin-right: 22px; 
+    font-size: 20px;
+}
+
+
+
+
+
+
