--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -49,69 +49,98 @@
 
 <div class="main-content">
     <div class="header">
-        <h1>tracker</h1>
+        <h1>Data Tracker</h1>
     </div>
-    <div class="content">
+    <div class="container-tracker"> 
         <form>
+            <div class="container-for-tracker">
+                <div class="container-for-fields">
+                    <div class="field">
+                        <label for="baranggay" class="data-label">Baranggay:</label>
+                        <input type="text" id="baranggay" name="baranggay" class="data-input">
+                    </div>
 
-            <label for="gender" class="data-label">Gender:</label>
-                <select id="gender" name="gender">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Transgender</option>
-                </select>
+                    <div class="field"> 
+                        <label for="gender" class="data-label">Gender:</label>
+                            <label class="radio-option">
+                                <input type="radio" name="gender" value="male">
+                                <span>Male</span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="gender" value="female">
+                                <span>Female</span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="gender" value="transgender">
+                                <span>Transgender</span>
+                            </label>
+                    </div>
 
-            <label for="age" class="data-label">Age:</label>
-            <input type="text" id="age" name="age" class="data-input">
-                
-            
-            <label for="repeat" class="data-label">Has the person been tested before?</label>
-                <select id="repeat" name="repeat">
-                    <option value="not-repeat-tester">Yes (First time tester)</option>
-                    <option value="repeat-tester">No (Has been tested before) </option>
-                </select>
-            
-            <label for="reason-hiv" class="data-label">Reason for HIV test:</label>  
-                <select id="reason-hiv" name="reason-hiv">
-                    <option value="unprotected">Unprotected Sex</option>
-                    <option value="injectable-drugs">Use of injectable drugs</option>
-                    <option value="pregnancy">Pregnancy</option>
-                    <option value="exposed-child">HIV-exposed child</option>
-                    <option value="pitc">PITC - III health</option>
-                    <option value="positive-partner">HIV positive partner</option>
-                    <option value="rape">Non consensual sex and rape</option>
-                    <option value="bloodtransfusion">History of bloodtransfusion or exposure to contaminated equipment</option>
-                    <option value="hcw">Occupational hazard health care worker (HCW)</option>
-                    <option value="administrative">Administrative reason</option>
-                    <option value="history">Subjective ill health or history of sexually transmitted infection(s)</option>
-                    <option value="no-reason">No specific reason disclosed</option>
-                </select>
+                    <div class="field">
+                        <label for="age" class="data-label">Age:</label>
+                        <input type="text" id="age" name="age" class="data-input">
+                    </div>
+                    
+                    <div class="field">
+                        <label for="repeat" class="data-label">Has the person been tested before?</label>
+                            <label class="radio-option">
+                                <input type="radio" name="tested" value="tested-yes">
+                                <span>Yes (First time tester)</span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="tested" value="tested-no">
+                                <span>No (Has been tested before)</span>
+                            </label>
+                    </div>
 
-            <label for="vulnerable-population" class="data-label">Key or Vulnerable Population (KVP) at higher risk</label>
-                <select id="vulnerable-population" name="vulnerable-population">
-                    <option value="pwid">Person who injects drugs (PWID) or other needle sharing</option>
-                    <option value="msm">Gay and other Men having Sex with Men (MSM)</option>
-                    <option value="transgenders">Transgenders</option>
-                    <option value="sex-worker">Sex /entertainment worker</option>
-                    <option value="pdl">Prisoner / detainee</option>
-                    <option value="migrant">Mobile and migrant populations</option>
-                    <option value="pwud">Person who uses non-injectable drugs (PWUD)</option>
-                    <option value="uniformed">Uniformed forces (military, police, security)</option>
-                    <option value="sexual-partners">Sexual Partners of identified KP at higher risk</option>
-                    <option value="agew">Adolescent Girls and Young Women (AGEW)</option>
-                    <option value="disability">Persons with disability</option>
-                    <option value="plhiv">HIV-negative sexual partners of PLHIV</option>
-                    <option value="not-disclosed">No key or vulnerable population known or not disclosed</option>
-                </select>
+                    <div class="field">
+                        <label for="reason-hiv" class="data-label">Reason for HIV test:</label>  
+                        <select id="reason-hiv" name="reason-hiv">
+                            <option value="unprotected">Unprotected Sex</option>
+                            <option value="injectable-drugs">Use of injectable drugs</option>
+                            <option value="pregnancy">Pregnancy</option>
+                            <option value="exposed-child">HIV-exposed child</option>
+                            <option value="pitc">PITC - III health</option>
+                            <option value="positive-partner">HIV positive partner</option>
+                            <option value="rape">Non consensual sex and rape</option>
+                            <option value="bloodtransfusion">History of bloodtransfusion or exposure to contaminated equipment</option>
+                            <option value="hcw">Occupational hazard health care worker (HCW)</option>
+                            <option value="administrative">Administrative reason</option>
+                            <option value="history">Subjective ill health or history of sexually transmitted infection(s)</option>
+                            <option value="no-reason">No specific reason disclosed</option>
+                        </select>
+                    </div>
 
-            <label for="linkage" class="data-label">Linkage</label>
-                <select id="linkage" name="linkage">
-                    <option value="treatment-facility">Linked to Treatment Facility</option>
-                    <option value="follow-up">Linkage not yet confirmed, under follow-up</option>
-                    <option value="unconfirmed">linkage unconfirmed (after 3 months follow-up)</option>
-                </select>
-            
-            <input type="submit" value="Submit">
+                    <div class="field">
+                        <label for="vulnerable-population" class="data-label">Key or Vulnerable Population (KVP) at higher risk</label>
+                        <select id="vulnerable-population" name="vulnerable-population">
+                            <option value="pwid">Person who injects drugs (PWID) or other needle sharing</option>
+                            <option value="msm">Gay and other Men having Sex with Men (MSM)</option>
+                            <option value="transgenders">Transgenders</option>
+                            <option value="sex-worker">Sex /entertainment worker</option>
+                            <option value="pdl">Prisoner / detainee</option>
+                            <option value="migrant">Mobile and migrant populations</option>
+                            <option value="pwud">Person who uses non-injectable drugs (PWUD)</option>
+                            <option value="uniformed">Uniformed forces (military, police, security)</option>
+                            <option value="sexual-partners">Sexual Partners of identified KP at higher risk</option>
+                            <option value="agew">Adolescent Girls and Young Women (AGEW)</option>
+                            <option value="disability">Persons with disability</option>
+                            <option value="plhiv">HIV-negative sexual partners of PLHIV</option>
+                            <option value="not-disclosed">No key or vulnerable population known or not disclosed</option>
+                        </select>
+                    </div>
+
+                    <div class="field">
+                        <label for="linkage" class="data-label">Linkage</label>
+                        <select id="linkage" name="linkage">
+                            <option value="treatment-facility">Linked to Treatment Facility</option>
+                            <option value="follow-up">Linkage not yet confirmed, under follow-up</option>
+                            <option value="unconfirmed">linkage unconfirmed (after 3 months follow-up)</option>
+                        </select>
+                    </div>
+                </div>
+                <input type="submit" class="submit-button" value="Submit">
+            </div>
         </form>
     </div>
 </div>
