Adde edit profile

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -48,10 +48,32 @@
 </div>
 
 <div class="main-content">
+
     <div class="header">
-        <h1>edit profile</h1>
+        <h1>Edit Profile</h1>
     </div>
-    <div class="content">
-        * add content here *
-    </div>
+
+    <form>
+
+        <div class="container-for-profile">
+            
+            <div class="password-field">
+
+                    <label for="current-password" class="password-label">Current Password:</label>
+                    <input type="text" id="current-password" class="password-input">
+
+            </div>
+
+            <div class="password-field">
+
+                <label for="current-password" class="password-label">New Password:</label>
+                <input type="text" id="current-password" class="password-input">
+
+            </div>
+            <input type="submit" class="submit-button" value="Submit">
+
+        </div>
+        
+    </form>
+
 </div>
