--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -55,7 +55,7 @@
             <div class="container-for-tracker">
                 <div class="container-for-fields">
                     <div class="field">
-                        <label for="baranggay" class="data-label">Baranggay:</label>
+                        <label for="baranggay" class="data-label">Barangay:</label>
                         <input type="text" id="baranggay" name="baranggay" class="data-input">
                     </div>
 
