--- a/public/style.css
+++ b/public/style.css
@@ -514,6 +514,40 @@ select:focus {
 
 
 
+/* For Edit Profile*/
+
+.container-for-profile {
+    width: 1400px; 
+    height: 500px; 
+    background-color: #fca3a3; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+
+.password-field {
+    padding-top: 20px;
+}
+
+.password-label {
+    width: 550px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.password-input {
+    width: 500px;
+    height: 30px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    font-size: 15px;
+}
+
+
 
 
 
