Added test result in tracker

--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -103,6 +103,22 @@
                     </div>
 
                     <div class="field">
+                        <label for="result" class="data-label">Test result: </label>
+                            <label class="radio-option">
+                                <input type="radio" name="result" value="positive">
+                                <span>Positive</span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="result" value="negative">
+                                <span>Negative</span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="result" value="not-know">
+                                <span>Don't Know (For repeat testers)</span>
+                            </label>
+                    </div>
+
+                    <div class="field">
                         <label for="reason-hiv" class="data-label">Reason for HIV test:</label>  
                         <select id="reason-hiv" name="reason-hiv">
                             <option value="unprotected">Unprotected Sex</option>
