improved dashboard styling

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -49,12 +49,27 @@
 
 <div class="main-content">
     <div class="header">
-        <h1>dashboard</h1>
+        <h1>Dashboard</h1>
     </div>
+
     <div class="filter">
-        <div class="monthly">Month</div>
+        <select class="monthly">
+            <option value="january">January</option>
+            <option value="february">February</option>
+            <option value="march">March</option>
+            <option value="april">April</option>
+            <option value="may">May</option>
+            <option value="june">June</option>
+            <option value="july">July</option>
+            <option value="august">August</option>
+            <option value="september">September</option>
+            <option value="october">October</option>
+            <option value="november">November</option>
+            <option value="december">December</option>
+        </select>
         <div class="yearly">Yearly</div>
     </div>
+
     <div class="statistics">
         <div class="total">
             <div id="stats">
@@ -78,6 +93,7 @@
             <i id="icon-stats" class="bx bxs-user-minus"></i>
         </div>
     </div>
+
     <div class="container">
         <div class="graph1">
             <p class="reason">Testing outcomes by main reason for HIV Test</p>
