--- a/public/style.css
+++ b/public/style.css
@@ -344,46 +344,47 @@ select.monthly:hover, .yearly:hover{
 /* container for graphs */
 .container {
     display: grid;
-    grid-template-rows: repeat(4, 380px); 
-    grid-template-columns: repeat(8, 1fr); 
+    grid-template-rows: repeat(3, 1fr); 
+    grid-template-columns: repeat(6, 1fr); 
     gap: 20px; 
 }
 
-/* grid items */
+/* grid items / graphs */
 .graph1, .graph2, .graph3, .graph4, .graph5, .graph6 {
     background-color: #fff;
-    padding: 10px;
+    padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 .graph1 {
-    grid-row: 1 / 3;
-    grid-column: 1 / 6;
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
 }
 
 .graph2 {
-    grid-row: 3 / 5;
-    grid-column: 1 / 6;
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
 }
 
 .graph3 {
-    grid-row: 1 / 2;
-    grid-column: 6 / 9;
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
 }
 
 .graph4 {
-    grid-row: 2 / 3;
-    grid-column: 6 / 9;
+    grid-row: 1 / 2;
+    grid-column: 4 / 7; 
 }
 
 .graph5 {
-    grid-row: 3 / 4;
-    grid-column: 6 / 9;
+    grid-row: 2 / 3;
+    grid-column: 4 / 7;
 }
 
 .graph6 {
-    grid-row: 4 / 5;
-    grid-column: 6 / 9;
+    grid-row: 3 / 4;
+    grid-column: 4 / 7;
 }
 
 .chart {
@@ -393,9 +394,9 @@ select.monthly:hover, .yearly:hover{
     height: 100%;
 }
 
-.graph1.chart canvas, .graph2.chart canvas {
+.chart canvas {
     width: 100% !important;
-    height: 70% !important;
+    height: 90% !important;
 }
 
 /* statistics */
@@ -453,8 +454,6 @@ select.monthly:hover, .yearly:hover{
 }
 
 /** DATA TRACKER PAGE **/
-
-/* container */
 .container-for-tracker {
     width: 1500px; 
     height: 640px; 
@@ -545,9 +544,10 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
 
 /** PROFILE PAGE **/
 .container-for-profile {
-    width: 1400px; 
+    width: 1500px; 
     height: 500px; 
-    background-color: #FFECF0; 
+    background-color: #FFECF0;
+    border: 2px solid black; 
     display: flex;
     flex-direction: column;
     align-items: center;
