--- a/public/style.css
+++ b/public/style.css
@@ -546,15 +546,16 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
 
 /** PROFILE PAGE **/
 .container-for-profile {
-    width: 1500px; 
-    height: 500px; 
-    background-color: #FFECF0;
-    border: 2px solid black; 
+    background-color: #FFECF0; 
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    border-radius: 20px;
+    padding: 30px;
+    margin: 40px auto;
 }
 
 .password-field {
