fixed css styling

--- a/public/style.css
+++ b/public/style.css
@@ -464,7 +464,7 @@ select.monthly:hover, .yearly:hover{
     flex-direction: column;
     align-items: center;
     padding: 30px;
-    margin: 40px auto;
+    margin: 30px;
 }
 
 .container-for-fields {
@@ -555,7 +555,7 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
     flex-direction: column;
     align-items: center;
     padding: 30px;
-    margin: 40px auto;
+    margin: 30px;
 }
 
 .password-field {
