--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -56,21 +56,44 @@
     <form>
 
         <div class="container-for-profile">
-            
-            <div class="password-field">
 
-                    <label for="current-password" class="password-label">Current Password:</label>
-                    <input type="text" id="current-password" class="password-input">
-
+            <div class="side-logo">
+                <img src="./gabay-logo.jpeg" alt="gabay org" class="side-logo">
             </div>
 
-            <div class="password-field">
+            <div class="profile-fields">
 
-                <label for="current-password" class="password-label">New Password:</label>
-                <input type="text" id="current-password" class="password-input">
+                <div class="profile-input-field">
 
+                        <label for="name" class="profile-label">NAME</label>
+                        <input type="text" class="profile-textarea">
+
+                </div>
+
+                <div class="profile-input-field">
+
+                        <label for="name" class="profile-label">ROLE</label>
+                        <input type="text" class="profile-textarea">
+
+                </div>
+
+                <div class="profile-input-field">
+
+                        <label for="name" class="profile-label">EMAIL</label>
+                        <input type="text" class="profile-textarea">
+
+                </div>
+
+                <div class="profile-input-field">
+
+                    <label for="current-password" class="profile-label">PASSWORD</label>
+                    <input type="text" class="profile-textarea">
+
+                </div>
+
+                <input type="submit" class="profile-submit-button" value="Save Changes">
+                
             </div>
-            <input type="submit" class="submit-button" value="Submit">
 
         </div>
         
