updated sidebar for all pages and added history page

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -2,7 +2,7 @@
     <div class="top">
         <div class="logo">
             <img id="logo-mini" src="./logo.png" alt="logo"/>
-            <span>DB App</span>
+            <span>HIV Advocacy Database (HAD)</span>
         </div>
         <i class ="bx bx-menu" id="btn"></i>
     </div>
@@ -28,6 +28,13 @@
                 <span class="nav-item">Profile</span>
             </a>
             <span class="tooltip">Profile</span>
+        </li>
+        <li>
+            <a href="/history">
+                <i class="bx bx-list-ul"></i>
+                <span class="nav-item">History Log</span>
+            </a>
+            <span class="tooltip">History Log</span>
         </li>
         <li>
             <a href="/login">
