--- a/views/history.hbs
+++ b/views/history.hbs
@@ -22,14 +22,14 @@
             </a>
             <span class="tooltip">Data Tracker</span>
         </li>
-        <li class="active">
+        <li>
             <a href="/profile">
                 <i class="bx bxs-user"></i>
                 <span class="nav-item">Profile</span>
             </a>
             <span class="tooltip">Profile</span>
         </li>
-        <li>
+        <li class="active">
             <a href="/history">
                 <i class="bx bx-list-ul"></i>
                 <span class="nav-item">History Log</span>
@@ -55,55 +55,8 @@
 </div>
 
 <div class="main-content">
-
     <div class="header">
-        <h1>Edit Profile</h1>
+        <h1>History Log</h1>
     </div>
-
-    <form>
-
-        <div class="container-for-profile">
-
-            <div class="side-logo">
-                <img src="./gabay-logo.jpeg" alt="gabay org" class="side-logo">
-            </div>
-
-            <div class="profile-fields">
-
-                <div class="profile-input-field">
-
-                    <label for="name" class="profile-label">NAME</label>
-                    <input type="text" class="profile-textarea">
-
-                </div>
-
-                <div class="profile-input-field">
-
-                    <label for="name" class="profile-label">ROLE</label>
-                    <input type="text" class="profile-textarea">
-
-                </div>
-
-                <div class="profile-input-field">
-
-                    <label for="name" class="profile-label">EMAIL</label>
-                    <input type="text" class="profile-textarea">
-
-                </div>
-
-                <div class="profile-input-field">
-
-                    <label for="current-password" class="profile-label">PASSWORD</label>
-                    <input type="text" class="profile-textarea">
-
-                </div>
-
-                <input type="submit" class="profile-submit-button" value="Save Changes">
-                
-            </div>
-
-        </div>
-        
-    </form>
 
 </div>
