fixed the history log

--- a/public/style.css
+++ b/public/style.css
@@ -624,26 +624,32 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
 }
 
 /** HISTORY PAGE **/
-.container-for-history {
-    background-color: #ffe4e1; 
+.container-for-history,
+.container-for-tracker {
+    background-color: #ffe4e1;
     padding: 20px;
-    margin: 20px 0; 
+    margin: 20px 0;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .history-log {
     width: 100%;
     border-collapse: collapse;
 }
-.history-log th, .history-log td {
+
+.history-log th,
+.history-log td {
     padding: 10px;
     text-align: left;
 }
+
 .history-log th {
-    background-color: #dbb1b1; 
+    background-color: #dbb1b1;
 }
+
 .details {
-    font-size: 24px; 
-    font-weight: bold; 
-    margin-bottom: 10px; 
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
