read-user and create-user (WIP)

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -11,7 +11,7 @@
         <p class="main"><b>Welcome</b></p>
         <p class="details">Please Enter Your Detail</p>
         
-        <form name="read-user" action="read-user" method="post">
+        <form name="create-user" action="create-user" method="post">
             <div class="form-group">
                 <input name="name" id="name-field" type="text" placeholder="Name"></input>
             </div>
