Update for login and sign up

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,6 +11,7 @@
         <p class="main"><b>Welcome Back Again</b></p>
         <p class="details">Please Enter Your Detail</p>
         
+        <p class="error">{{failed}}</p>
         <form name="read-user" action="read-user" method="post">
             <div class="form-group">
                 <input name="email" id="email-field" type="email" placeholder="Email" required></input>
