implemented add-record functionality patient records

--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -58,7 +58,7 @@
     <div class="header">
         <h1>Data Tracker</h1>
     </div>
-        <form>
+        <form action="add-record" method="post">
             <div class="container-for-tracker">
                 <div class="container-for-fields">
                     <div class="field">
